# docs/swagger.yaml
@@ -20,7 +20,11 @@ definitions:
         type: string
       difficulty:
         type: integer
+      id:
+        type: integer
       options:
+        type: string
+      question_id:
         type: string
       type:
         type: string
